--- a/index.html
+++ b/index.html
@@ -79,9 +79,11 @@
           border-top: 4px solid white;
           border-bottom: 4px solid white;
           border-right: 4px solid white;
+          border-radius: 5px 50px 50px 5px;
         "
       >
-        <div style="background-color: red; height: 30px"></div>
+        <div style="background-color: red; height: 30px;
+        border-radius: 5px 50px 50px 5px"></div>
         <div
           id="enemyHealth"
           style="
@@ -91,6 +93,7 @@
             right: 0;
             bottom: 0;
             left: 0;
+            border-radius: 5px 50px 50px 5px;
           "
         ></div>
       </div>
